fix: add api prefix to each path to prevent clashes
